--- a/package.json
+++ b/package.json
@@ -31,7 +31,7 @@
     "react-native": "0.73.2",
     "react-native-elements": "^3.4.3",
     "react-native-gesture-handler": "~2.14.0",
-    "react-native-maps": "1.10.0",
+    "react-native-maps": "^1.10.0",
     "react-native-paper": "^5.12.1",
     "react-native-reanimated": "~3.6.2",
     "react-native-safe-area-context": "4.8.2",
