--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "format": "prettier --write \"**/*.{js,jsx,ts,tsx,json,md}\""
   },
   "dependencies": {
+    "@babel/node": "^7.26.0",
     "@modelcontextprotocol/sdk": "^1.7.0",
     "@react-navigation/bottom-tabs": "^6.5.11",
     "@react-navigation/native": "^6.1.9",
@@ -41,7 +42,7 @@
     "yup": "^1.3.3"
   },
   "devDependencies": {
-    "@babel/core": "^7.20.0",
+    "@babel/core": "^7.26.10",
     "@types/react": "~18.2.45",
     "@types/react-native": "~0.73.0",
     "@typescript-eslint/eslint-plugin": "^6.19.1",
