--- a/package.json
+++ b/package.json
@@ -4,8 +4,8 @@
   "main": "node_modules/expo/AppEntry.js",
   "scripts": {
     "start": "expo start",
-    "android": "expo start --android",
-    "ios": "expo start --ios",
+    "android": "expo run:android",
+    "ios": "expo run:ios",
     "web": "expo start --web",
     "eject": "expo eject",
     "lint": "eslint .",
@@ -13,7 +13,10 @@
   },
   "dependencies": {
     "@babel/node": "^7.26.0",
+    "@expo/webpack-config": "^19.0.1",
     "@modelcontextprotocol/sdk": "^1.7.0",
+    "@react-native-async-storage/async-storage": "^1.21.0",
+    "@react-native-community/datetimepicker": "^7.7.0",
     "@react-navigation/bottom-tabs": "^6.5.11",
     "@react-navigation/native": "^6.1.9",
     "@react-navigation/native-stack": "^6.9.17",
@@ -29,7 +32,8 @@
     "expo-status-bar": "~1.11.1",
     "formik": "^2.4.5",
     "react": "18.2.0",
-    "react-native": "0.73.2",
+    "react-dom": "^18.2.0",
+    "react-native": "^0.73.6",
     "react-native-elements": "^3.4.3",
     "react-native-gesture-handler": "~2.14.0",
     "react-native-maps": "^1.10.0",
@@ -37,7 +41,9 @@
     "react-native-reanimated": "~3.6.2",
     "react-native-safe-area-context": "4.8.2",
     "react-native-screens": "~3.29.0",
+    "react-native-url-polyfill": "^2.0.0",
     "react-native-vector-icons": "^10.0.3",
+    "react-native-web": "^0.19.13",
     "react-redux": "^9.1.0",
     "yup": "^1.3.3"
   },
@@ -47,6 +53,7 @@
     "@types/react-native": "~0.73.0",
     "@typescript-eslint/eslint-plugin": "^6.19.1",
     "@typescript-eslint/parser": "^6.19.1",
+    "babel-plugin-module-resolver": "^5.0.2",
     "eslint": "^8.56.0",
     "eslint-plugin-react": "^7.33.2",
     "eslint-plugin-react-hooks": "^4.6.0",
