--- a/package.json
+++ b/package.json
@@ -9,7 +9,15 @@
     "web": "expo start --web",
     "eject": "expo eject",
     "lint": "eslint .",
-    "format": "prettier --write \"**/*.{js,jsx,ts,tsx,json,md}\""
+    "format": "prettier --write \"**/*.{js,jsx,ts,tsx,json,md}\"",
+    "start-expo-go": "expo start --port=8083 --clear",
+    "debug": "expo start --port=8083 --clear --no-dev --minify",
+    "emulator-android": "expo start --android --port=8083 --clear",
+    "emulator-ios": "expo start --ios --port=8083 --clear",
+    "setup-urls": "node scripts/emulator-setup.js",
+    "test": "jest",
+    "test:watch": "jest --watch",
+    "test:coverage": "jest --coverage"
   },
   "dependencies": {
     "@babel/node": "^7.26.0",
@@ -17,26 +25,32 @@
     "@modelcontextprotocol/sdk": "^1.7.0",
     "@react-native-async-storage/async-storage": "^1.21.0",
     "@react-native-community/datetimepicker": "^7.7.0",
+    "@react-native-community/slider": "^4.4.2",
     "@react-navigation/bottom-tabs": "^6.5.11",
     "@react-navigation/native": "^6.1.9",
     "@react-navigation/native-stack": "^6.9.17",
+    "@react-navigation/stack": "^6.3.20",
     "@reduxjs/toolkit": "^2.0.1",
     "@smithery/sdk": "^1.0.2",
-    "@supabase/supabase-js": "^2.39.3",
-    "date-fns": "^3.0.6",
+    "@supabase/supabase-js": "^2.49.4",
+    "date-fns": "^3.6.0",
+    "dotenv": "^16.4.7",
     "expo": "~50.0.5",
     "expo-image-picker": "~14.7.1",
     "expo-location": "~16.5.2",
+    "expo-network": "~5.8.0",
     "expo-notifications": "~0.27.4",
     "expo-secure-store": "~12.8.1",
     "expo-status-bar": "~1.11.1",
     "formik": "^2.4.5",
+    "lottie-react-native": "^6.5.1",
     "react": "18.2.0",
     "react-dom": "^18.2.0",
     "react-native": "^0.73.6",
     "react-native-elements": "^3.4.3",
     "react-native-gesture-handler": "~2.14.0",
     "react-native-maps": "^1.10.0",
+    "react-native-multiple-select": "^0.5.12",
     "react-native-paper": "^5.12.1",
     "react-native-reanimated": "~3.6.2",
     "react-native-safe-area-context": "4.8.2",
@@ -49,6 +63,10 @@
   },
   "devDependencies": {
     "@babel/core": "^7.26.10",
+    "@testing-library/jest-native": "^5.4.3",
+    "@testing-library/react-hooks": "^8.0.1",
+    "@testing-library/react-native": "^12.4.3",
+    "@types/jest": "^29.5.12",
     "@types/react": "~18.2.45",
     "@types/react-native": "~0.73.0",
     "@typescript-eslint/eslint-plugin": "^6.19.1",
@@ -57,8 +75,34 @@
     "eslint": "^8.56.0",
     "eslint-plugin-react": "^7.33.2",
     "eslint-plugin-react-hooks": "^4.6.0",
+    "jest": "^29.7.0",
+    "jest-expo": "~50.0.4",
     "prettier": "^3.2.4",
+    "ts-jest": "^29.1.2",
     "typescript": "^5.3.0"
   },
-  "private": true
+  "private": true,
+  "jest": {
+    "preset": "jest-expo",
+    "transformIgnorePatterns": [
+      "node_modules/(?!((jest-)?react-native|@react-native(-community)?)|expo(nent)?|@expo(nent)?/.*|@expo-google-fonts/.*|react-navigation|@react-navigation/.*|@unimodules/.*|unimodules|sentry-expo|native-base|react-native-svg)"
+    ],
+    "setupFilesAfterEnv": [
+      "@testing-library/jest-native/extend-expect"
+    ],
+    "collectCoverageFrom": [
+      "src/**/*.{js,jsx,ts,tsx}",
+      "!src/**/*.d.ts",
+      "!src/config/**/*",
+      "!src/assets/**/*"
+    ],
+    "coverageThreshold": {
+      "global": {
+        "branches": 80,
+        "functions": 80,
+        "lines": 80,
+        "statements": 80
+      }
+    }
+  }
 }
