--- a/.gitignore
+++ b/.gitignore
@@ -49,4 +49,9 @@ project.xcworkspace
 .env.local
 .env.development.local
 .env.test.local
-.env.production.local 
+.env.production.local
+
+# MCP configuration files
+github-mcp-config.json
+mcp.json
+*-mcp-config.json
